gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/diag_class_alloc.d
version https://git-lfs.github.com/spec/v1
oid sha256:f5e23291917843cbe5fc3945f8def7ead4151543ec483273aed1dc091eaba8bf
size 647
